<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_share"
        android:enabled="true"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1"
        android:title="@string/share"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_person_search_white_24"
        android:title="@string/find_username"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/change_language"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/change_language_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/change_theme"
        android:title="@string/dark_mode"
        android:icon="@drawable/ic_moon"
        app:actionLayout="@layout/use_switch"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/favorite_page"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite_page"
        app:showAsAction="never" />



</menu>