<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_item_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/avatar_image"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:textAppearance="@style/TextViewChildUser"
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/iv_item_avatar"
            android:textSize="20sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/iv_item_avatar"
            card_view:layout_constraintTop_toTopOf="@+id/iv_item_avatar"
            tools:text="@string/user" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/username_image"
            android:src="@drawable/ic_person_24"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_name" />

        <TextView
            android:textAppearance="@style/TextViewChildUser"
            android:id="@+id/tv_item_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_username"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintStart_toEndOf="@id/iv_username"
            card_view:layout_constraintTop_toTopOf="@id/iv_username"
            tools:text="@string/username" />

        <ImageView
            android:id="@+id/iv_item_company"
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/company_image"
            android:src="@drawable/ic_work_24"
            card_view:layout_constraintStart_toStartOf="@id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@id/iv_username" />

        <TextView
            android:textAppearance="@style/TextViewChildUser"
            android:id="@+id/tv_item_company"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="@id/iv_item_company"
            card_view:layout_constraintEnd_toEndOf="@id/tv_item_name"
            card_view:layout_constraintStart_toEndOf="@id/iv_item_company"
            card_view:layout_constraintTop_toTopOf="@id/iv_item_company"
            tools:text="@string/company" />

        <TextView
            android:id="@+id/count_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/tv_rounded_repository"
            android:text="@string/repository"
            android:textColor="@android:color/black"
            card_view:layout_constraintStart_toStartOf="@id/iv_item_company"
            card_view:layout_constraintTop_toBottomOf="@id/tv_item_company" />

        <TextView
            android:id="@+id/count_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count_repository"
            android:layout_marginTop="5dp"
            android:background="@drawable/tv_rounded_following"
            android:text="@string/followings"
            android:textColor="@android:color/black"
            card_view:layout_constraintStart_toStartOf="@id/iv_item_company"
            card_view:layout_constraintTop_toBottomOf="@id/count_repository" />

        <TextView
            android:id="@+id/count_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count_following"
            android:layout_marginTop="5dp"
            android:background="@drawable/tv_rounded_followers"
            android:text="@string/follower"
            card_view:layout_constraintStart_toStartOf="@id/count_following"
            card_view:layout_constraintTop_toBottomOf="@id/count_following" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="12sp"
            card_view:layout_constraintStart_toStartOf="@id/count_followers"
            card_view:layout_constraintTop_toBottomOf="@id/count_followers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


